Fixed li fontsize. Spacing on amberstone description

--- a/css/default.css
+++ b/css/default.css
@@ -145,7 +145,7 @@ body {
    background: #fff;
    font-family: 'opensans-regular', sans-serif;
    font-weight: normal;
-   font-size: 15px;
+   font-size: 14px;
    line-height: 30px;
 	color: #505050;
 
@@ -312,7 +312,7 @@ ul ul, ul ol,
 ol ol, ol ul { margin: 6px 0 6px 30px; }
 ul ul li, ul ol li,
 ol ol li, ol ul li { margin-bottom: 6px; }
-li { line-height: 18px; margin-bottom: 12px; }
+li { line-height: 18px; margin-bottom: 12px; font-size: 14px;}
 ul.large li { }
 li p { }
 
